# trading-bot

./: .gitignore  ADVANCED_AI_MODELS_DOCUMENTATION.md  ADVANCED_AI_MODELS_IMPLEMENTATION_SUMMARY.md  ADVANCED_MODELS_DOCUMENTATION.md  ADVANCED_POSITION_SIZING_SOLUTION_SUMMARY.md  ADVANCED_SIGNAL_GENERATION_GUIDE.md  ADVANCED_SIGNAL_GENERATION_IMPLEMENTATION_SUMMARY.md  ADVANCED_SYSTEMS_IMPLEMENTATION_SUMMARY.md  ADVANCED_TARGET_ENGINEERING_SUMMARY.md  ADVANCED_TIME_SERIES_FORECASTING_GUIDE.md  ADVANCED_TIME_SERIES_IMPLEMENTATION_SUMMARY.md  AI_CRYPTO_IMPROVEMENTS_SUMMARY.md  AI_TRADING_BOT_SCREENER_README.md  AI_TRADING_PIPELINE_GUIDE.md  ALERTS_IMPLEMENTATION_SUMMARY.md  API_INTEGRATION_SUMMARY.md  API_KEYS_SETUP_GUIDE.md  API_KEY_ROTATION_IMPLEMENTATION_GUIDE.md  API_SECURITY_CONFIGURATION_GUIDE.md  API_SETUP_GUIDE.md  API_STATUS_SUMMARY.md  AUDIT_LOGGING_IMPLEMENTATION_SUMMARY.md  BACKTESTING_GUIDE.md  BINARY_COMPILATION_GUIDE.md  BOT_IMPROVEMENT_ROADMAP.md  CERTIFICATE_VALIDATION_GUIDE.md  CERTIFICATE_VALIDATION_IMPLEMENTATION_SUMMARY.md  CHARTS_GUIDE.md  COINMARKETCAP_INTEGRATION.md  COIN_LISTINGS_INTEGRATION_GUIDE.md  COMPLETE_API_SETUP_GUIDE.md  COMPLETE_CRYPTO_PAIRS_ANSWER.md  COMPLETE_CUSTOMIZATION_SOLUTION.md  COMPLETE_INPUT_VALIDATION_GUIDE.md  COMPLETE_LIVE_TRADING_ROADMAP.md  COMPLETE_SCHEMA_VALIDATION_SUMMARY.md  COMPLETE_SUCCESS_GUIDE.md  COMPLETE_SYSTEM_OVERVIEW.md  COMPREHENSIVE_AI_TRADING_BOT_STATUS.md  COMPREHENSIVE_AUDIT_LOGGING_GUIDE.md  (+516 more)
.github/workflows/: ci.yml
binary_modules/: setup.py
integrations/: integration_test_results.json
integrations/api/: endpoints.json  status.json
integrations/notifications/: config.json  status.json
integrations/trading/: config.json  status.json
production/: alerts.py  backup_system.py  health_check.json  live_trading_integration.py
production/config/: production.json
production/monitoring/: dashboard.py
react_components/: TradingChart.jsx  api.js
src/: __init__.py  main.py
src/agents/: __init__.py  base_agent.py  ensemble.py
src/core/: __init__.py  risk_manager.py
src/trading/: ai_trading_engine.py
tests/: __init__.py
tests/unit/: test_base_agent.py  test_imports.py  test_risk_manager.py
training_reports/: ULTIMATE_TRAINING_REPORT_20250622_171034.md
unified_trading_platform/: README.md  __init__.py  main.py  migrate_existing_bots.py  requirements.txt  requirements_minimal.txt  start_dashboard.py  start_platform.py
unified_trading_platform/config/: platform_config.yaml  scheduler_config.json
unified_trading_platform/core/: __init__.py  base_module.py  cache_manager.py  config_manager.py  event_bus.py  performance_monitor.py  pipeline_scheduler.py  plugin_manager.py  trading_engine.py
unified_trading_platform/dashboard/: app.py
unified_trading_platform/integrations/: trading_bot_connector.py
unified_trading_platform/modules/: __init__.py  ai_models.py  ai_trading_model.py  coin_listings_cex.py  coin_listings_dex.py  feature_engineer.py  historical_data_fetcher.py  market_data.py  new_listing_detector.py  order_execution.py  paper_trading_simulator.py  portfolio.py  risk_management.py  signal_generation.py  social_sentiment_analyzer.py
unified_trading_platform/performance/: optimizer.py
(+5 files in other folders)
